<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".LogActivity">
    <item
        android:id="@+id/menu_log_edit"
        android:title="@string/log_edit_tracking"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_log_delete"
        android:title="@string/log_delete_tracking"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_log_clear"
        android:title="@string/log_clear_log"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_log_force_request"
        android:title="@string/log_force_request"
        app:showAsAction="never"/>
</menu>